--- a/www/upload/up.css
+++ b/www/upload/up.css
@@ -6,6 +6,25 @@ body {
 
 form {
     margin-top: 20px;
+    display: inline-block;
+    margin: 10px;
+    padding: 12px 24px;
+    background-color: #2d8903;
+    color: #ffffff;
+    font-size: 16px;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.bottom {
+    background-color: #169265;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+  margin: 4px 2px;
+  cursor: pointer;
 }
 
 input[type="file"] {
@@ -31,3 +50,14 @@ hr {
     border-top: 1px solid #ccc;
     margin: 10px 0;
 }
+
+.centre {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50vh;
+  }
+
+
+
+  
